--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ body {
   margin: 0 auto 22px auto;
   padding: 18px 14px 12px 14px;
   border-radius: 13px;
-  width: 100%;
+  max-width: 650px;
   box-shadow: 0 4px 12px #0001;
 }
 
